--- a/main.html
+++ b/main.html
@@ -150,7 +150,7 @@
                     <div class="ad6_list">
                         <div>
                             <a href="sub/marketingsolution/marketing.html#e1" class="innerborder">
-                                <img src="./images/main/main_img_ad1.jpg" alt="골든블루" />
+                                <img src="images/main/main_img_ad1.jpg" alt="골든블루" />
                             </a>
                             <h3>골든블루</h3>
                             <p>#스크린광고</p>
