--- a/main.html
+++ b/main.html
@@ -149,18 +149,14 @@
                     </div>
                     <div class="ad6_list">
                         <div>
-                            <a href="sub/marketingsolution/marketing.html#e1" class="innerborder">
-                                <img src="images/main/main_img_ad1.jpg" alt="골든블루" />
-                            </a>
+                            <a href="sub/marketingsolution/marketing.html#e1" class="innerborder" style="background-image: url('images/main/main_img_ad1.jpg');"></a>
                             <h3>골든블루</h3>
                             <p>#스크린광고</p>
                             <p>#홀이동광고</p>
                             <p>#GTOUR 인비테이셔널</p>
                         </div>
                         <div>
-                            <a href="sub/marketingsolution/marketing.html#e1" class="innerborder">
-                                <img src="./images/main/main_img_ad2.jpg" alt="석교상사" />
-                            </a>
+                            <a href="sub/marketingsolution/marketing.html#e1" class="innerborder" style="background-image: url('images/main/main_img_ad2.jpg');"></a>
                             <h3>석교상사</h3>
                             <p>#스크린광고</p>
                             <p>#홀이동광고</p>
@@ -168,9 +164,7 @@
                             <p>#스크린골프존TVC</p>
                         </div>
                         <div>
-                            <a href="sub/marketingsolution/marketing.html#e2" class="innerborder">
-                                <img src="./images/main/main_img_ad3.jpg" alt="하이트진로" />
-                            </a>
+                            <a href="sub/marketingsolution/marketing.html#e1" class="innerborder" style="background-image: url('images/main/main_img_ad3.jpg');"></a>
                             <h3>하이트진로</h3>
                             <p>#배틀존</p>
                             <p>#브랜드커뮤니케이션</p>
@@ -180,9 +174,7 @@
                     </div>
                     <div class="ad6_list">
                         <div>
-                            <a href="sub/marketingsolution/marketing.html#e1" class="innerborder">
-                                <img src="./images/main/main_img_ad4.jpg" alt="신한투자증권" />
-                            </a>
+                            <a href="sub/marketingsolution/marketing.html#e1" class="innerborder" style="background-image: url('images/main/main_img_ad4.jpg');"></a>
                             <h3>신한투자증권</h3>
                             <p>#기업 PR</p>
                             <p>#기업네이밍 코스 제작</p>
@@ -192,9 +184,7 @@
                             <p>#이벤트&퍼포먼스</p>
                         </div>
                         <div>
-                            <a href="sub/marketingsolution/marketing.html#e2" class="innerborder">
-                                <img src="./images/main/main_img_ad5.jpg" alt="던롭스포츠" />
-                            </a>
+                            <a href="sub/marketingsolution/marketing.html#e1" class="innerborder" style="background-image: url('images/main/main_img_ad5.jpg');"></a>
                             <h3>던롭스포츠</h3>
                             <p>#모바일광고</p>
                             <p>#앱광고</p>
@@ -202,9 +192,7 @@
                             <p>#연간계약</p>
                         </div>
                         <div>
-                            <a href="sub/marketingsolution/marketing.html#e3" class="innerborder">
-                                <img src="./images/main/main_img_ad6.jpg" alt="한화생명보험" />
-                            </a>
+                            <a href="sub/marketingsolution/marketing.html#e1" class="innerborder" style="background-image: url('images/main/main_img_ad6.jpg');"></a>
                             <h3>한화생명보험</h3>
                             <p>#모바일광고</p>
                             <p>#앱광고</p>
