--- a/m/sub/marketingsolution/marketing.html
+++ b/m/sub/marketingsolution/marketing.html
@@ -240,7 +240,7 @@
                             <div class="swiper-slide">
                                 <div class="marketing">
                                     <a href="marketing1.html" >
-                                        <img src="../../images/sub/mt2.jpg" />
+                                        <img src="../../images/sub/mtt1.jpg" />
                                         <div class="marketing_info_text">
                                             <h2>골든블루</h2>
                                             <p>#스크린광고&nbsp;&nbsp;#홀이동광고<br>#GTOUR 인비테이셔널</p>
@@ -252,7 +252,7 @@
                             <div class="swiper-slide">
                                 <div class="marketing">
                                     <a href="marketing2.html" >
-                                        <img src="../../images/sub/mt3.jpg" />
+                                        <img src="../../images/sub/mtt2.jpg" />
                                         <div class="marketing_info_text">
                                             <h2>골프패션업계</h2>
                                             <p>#스크린광고&nbsp;&nbsp;#홀이동광고</p>
@@ -264,7 +264,7 @@
                             <div class="swiper-slide">
                                 <div class="marketing">
                                     <a href="marketing3.html" >
-                                        <img src="../../images/sub/mt8.jpg" />
+                                        <img src="../../images/sub/mtt3.jpg" />
                                         <div class="marketing_info_text">
                                             <h2>석교상사</h2>
                                             <p>
@@ -278,7 +278,7 @@
                             <div class="swiper-slide">
                                 <div class="marketing">
                                     <a href="marketing4.html" >
-                                        <img src="../../images/sub/mt12.jpg" />
+                                        <img src="../../images/sub/mtt4.jpg" />
                                         <div class="marketing_info_text">
                                             <h2>현대약품</h2>
                                             <p>#스크린광고&nbsp;&nbsp;#홀이동광고</p>
@@ -303,7 +303,7 @@
                             <div class="swiper-slide">
                                 <div class="marketing">
                                     <a href="marketing5.html" >
-                                        <img src="../../images/sub/mt10.jpg" />
+                                        <img src="../../images/sub/mtt5.jpg" />
                                         <div class="marketing_info_text">
                                             <h2>하이트진로</h2>
                                             <p>#배틀존<br>#브랜드커뮤니케이션<br>#오브젝트이벤트<br>#매장홍보포스터</p>
@@ -315,7 +315,7 @@
                             <div class="swiper-slide">
                                 <div class="marketing">
                                     <a href="marketing6.html" >
-                                        <img src="../../images/sub/mt9.jpg" />
+                                        <img src="../../images/sub/mtt6.jpg" />
                                         <div class="marketing_info_text">
                                             <h2>신한투자증권</h2>
                                             <p>#기업 PR<br>
@@ -332,7 +332,7 @@
                             <div class="swiper-slide">
                                 <div class="marketing">
                                     <a href="marketing7.html" >
-                                        <img src="../../images/sub/mt5.jpg" />
+                                        <img src="../../images/sub/mtt7.jpg" />
                                         <div class="marketing_info_text">
                                             <h2>렉서스</h2>
                                             <p>#장타이벤트<br>#브랜드존이벤트</p>
@@ -344,7 +344,7 @@
                             <div class="swiper-slide">
                                 <div class="marketing">
                                     <a href="marketing8.html" >
-                                        <img src="../../images/sub/mt6.jpg" />
+                                        <img src="../../images/sub/mtt8.jpg" />
                                         <div class="marketing_info_text">
                                             <h2>롯데렌터카</h2>
                                             <p>
@@ -371,7 +371,7 @@
                             <div class="swiper-slide">
                                 <div class="marketing">
                                     <a href="marketing9.html" >
-                                        <img src="../../images/sub/mt1.jpg" />
+                                        <img src="../../images/sub/mtt9.jpg" />
                                         <div class="marketing_info_text">
                                             <h2>KB증권</h2>
                                             <p>
@@ -385,7 +385,7 @@
                             <div class="swiper-slide">
                                 <div class="marketing">
                                     <a href="marketing10.html" >
-                                        <img src="../../images/sub/mt11.jpg" />
+                                        <img src="../../images/sub/mtt10.jpg" />
                                         <div class="marketing_info_text">
                                             <h2>한화생명보험</h2>
                                             <p>
@@ -399,7 +399,7 @@
                             <div class="swiper-slide">
                                 <div class="marketing">
                                     <a href="marketing11.html" >
-                                        <img src="../../images/sub/mt4.jpg" />
+                                        <img src="../../images/sub/mtt11.jpg" />
                                         <div class="marketing_info_text">
                                             <h2>던롭스포츠</h2>
                                             <p>#모바일광고&nbsp;&nbsp;#앱광고<br>#스크린로그인&nbsp;&nbsp;#연간계약</p>
@@ -411,7 +411,7 @@
                             <div class="swiper-slide">
                                 <div class="marketing">
                                     <a href="marketing12.html" >
-                                        <img src="../../images/sub/mt7.jpg" />
+                                        <img src="../../images/sub/mtt12.jpg" />
                                         <div class="marketing_info_text">
                                             <h2>롱기스트</h2>
                                             <p>
