--- a/m/sub/marketingsolution/marketing.html
+++ b/m/sub/marketingsolution/marketing.html
@@ -306,7 +306,7 @@
                                         <img src="../../images/sub/mtt5.jpg" />
                                         <div class="marketing_info_text">
                                             <h2>하이트진로</h2>
-                                            <p>#배틀존<br>#브랜드커뮤니케이션<br>#오브젝트이벤트<br>#매장홍보포스터</p>
+                                            <p>#배틀존<br>#브랜드커뮤니케이션<br>#오브젝트이벤트</p>
                                             <span>MORE</span>
                                         </div>
                                     </a>
