--- a/sub/golfzon/app.html
+++ b/sub/golfzon/app.html
@@ -290,10 +290,10 @@ jQuery(function ($) {
         spaceBetween: 0,
         loop: true,
         loopAdditionalSlides: 1,
-        autoplay: {
-            delay: 3000, //넘어가는 시간 (1000=1초)
-            disableOnInteraction: false,
-        },
+        // autoplay: {
+        //     delay: 3000, //넘어가는 시간 (1000=1초)
+        //     disableOnInteraction: false,
+        // },
         navigation: {
             nextEl: ".swiper-button-next",
             prevEl: ".swiper-button-prev",
