--- a/sub/marketingsolution/marketing.html
+++ b/sub/marketingsolution/marketing.html
@@ -100,8 +100,8 @@
                                 position: absolute;
                                 right: 100%;
                                 top: 0;
-                                width: 320px;
-                                margin-right: 30px;
+                                width: 260px;
+                                margin-right: 60px;
                             }
                             .marketing{
                                 float: none;
@@ -275,7 +275,7 @@
                                             <img src="../../images/sub/mtt5.jpg" />
                                             <div class="marketing_info_text">
                                                 <h2>하이트진로</h2>
-                                                <p>#배틀존&nbsp;&nbsp;#브랜드커뮤니케이션<br>#오브젝트이벤트&nbsp;&nbsp;#매장홍보포스터</p>
+                                                <p>#배틀존&nbsp;&nbsp;#브랜드커뮤니케이션<br>#오브젝트이벤트</p>
                                                 <span>MORE</span>
                                             </div>
                                         </div>
@@ -715,7 +715,7 @@
                                     대한민국 대표 소주 참이슬<br>
                                     대결의 즐거움 배틀존 서비스를 활용한 커뮤니케이션 전략
                                 </h2>
-                                <p class="pop_text">#배틀존&nbsp;&nbsp;#브랜드커뮤니케이션&nbsp;&nbsp;#오브젝트이벤트&nbsp;&nbsp;#매장홍보포스터</p>
+                                <p class="pop_text">#배틀존&nbsp;&nbsp;#브랜드커뮤니케이션&nbsp;&nbsp;#오브젝트이벤트</p>
                                 <div class="pop_info_img" style="text-align: center;">
                                     <img src="../../images/sub/img_marketing_pop_5.jpg" alt="" style="max-width:720px;border:15px solid white" />
                                 </div>
@@ -1386,8 +1386,8 @@ jQuery(function($){
     });
     var swiperPop = new Swiper(".mySwiper2", {
         navigation: {
-            nextEl: ".swiper-button-next",
-            prevEl: ".swiper-button-prev",
+            nextEl: ".mySwiper2 .swiper-button-next",
+            prevEl: ".mySwiper2 .swiper-button-prev",
         },
     });
     $(document).ready(function(){
