--- a/m/sub/marketingsolution/marketing5.html
+++ b/m/sub/marketingsolution/marketing5.html
@@ -27,7 +27,7 @@
                 대한민국 대표 소주 참이슬<br>
                 대결의 즐거움 배틀존 서비스를 <br>활용한 커뮤니케이션 전략
             </h2>
-            <p class="pop_text">#배틀존&nbsp;&nbsp;#브랜드커뮤니케이션&nbsp;&nbsp;#오브젝트이벤트&nbsp;&nbsp;#매장홍보포스터</p>
+            <p class="pop_text">#배틀존&nbsp;&nbsp;#브랜드커뮤니케이션&nbsp;&nbsp;#오브젝트이벤트</p>
             <div class="pop_info_img" style="text-align: center;">
                 <img src="../../images/sub/img_marketing_pop_5.jpg" alt="" style="max-width:720px;border:5px solid white" />
             </div>
