--- a/m/sub/marketingsolution/marketing.html
+++ b/m/sub/marketingsolution/marketing.html
@@ -384,7 +384,7 @@
                             <div class="swiper-slide">
                                 <div class="marketing">
                                     <a href="marketing10.html" >
-                                        <img src="../../images/sub/mtt10.jpg" />
+                                        <img src="../../images/sub/mtt10.jpg?ver=2" />
                                         <div class="marketing_info_text">
                                             <h2>한화생명보험</h2>
                                             <p>
@@ -410,7 +410,7 @@
                             <div class="swiper-slide">
                                 <div class="marketing">
                                     <a href="marketing12.html" >
-                                        <img src="../../images/sub/mtt12.jpg" />
+                                        <img src="../../images/sub/mtt12.jpg?ver=2" />
                                         <div class="marketing_info_text">
                                             <h2>롱기스트</h2>
                                             <p>
