--- a/sub/marketingsolution/marketing.html
+++ b/sub/marketingsolution/marketing.html
@@ -341,7 +341,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="marketing cont10">
-                                            <img src="../../images/sub/mtt10.jpg" />
+                                            <img src="../../images/sub/mtt10.jpg?ver=2" style="border-bottom: 1px solid #dcdcdc" />
                                             <div class="marketing_info_text">
                                                 <h2>한화생명보험</h2>
                                                 <p>
@@ -363,7 +363,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="marketing cont12">
-                                            <img src="../../images/sub/mtt12.jpg" />
+                                            <img src="../../images/sub/mtt12.jpg?ver=2" style="border-bottom: 1px solid #dcdcdc" />
                                             <div class="marketing_info_text">
                                                 <h2>롱기스트</h2>
                                                 <p>
@@ -716,7 +716,7 @@
                                 </h2>
                                 <p class="pop_text">#배틀존&nbsp;&nbsp;#브랜드커뮤니케이션&nbsp;&nbsp;#오브젝트이벤트</p>
                                 <div class="pop_info_img" style="text-align: center;">
-                                    <img src="../../images/sub/img_marketing_pop_5.jpg" alt="" style="max-width:720px;border:15px solid white" />
+                                    <img src="../../images/sub/mtt5.jpg" alt="" style="max-width:720px;border:15px solid white" />
                                 </div>
                                 <div class="pop_text_list">
                                     <dl style="margin-top:0">
