--- a/main.html
+++ b/main.html
@@ -194,7 +194,7 @@
                             <p>#연간계약</p>
                         </div>
                         <div>
-                            <a href="sub/marketingsolution/marketing.html#e1" class="innerborder" style="background-image: url('images/main/main_img_solution6.jpg?ver=2');border-bottom: 1px solid #dcdcdc"></a>
+                            <a href="sub/marketingsolution/marketing.html#e1" class="innerborder" style="background-image: url('images/main/main_img_solution6.jpg?ver=2');"></a>
                             <h3>한화생명보험</h3>
                             <p>#모바일광고</p>
                             <p>#앱광고</p>
