--- a/sub/marketingsolution/marketing.html
+++ b/sub/marketingsolution/marketing.html
@@ -341,7 +341,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="marketing cont10">
-                                            <img src="../../images/sub/mtt10.jpg?ver=2" />
+                                            <img src="../../images/sub/mtt10.jpg?ver=3" style="border-bottom: 1px solid #dcdcdc" />
                                             <div class="marketing_info_text">
                                                 <h2>한화생명보험</h2>
                                                 <p>
@@ -363,7 +363,7 @@
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="marketing cont12">
-                                            <img src="../../images/sub/mtt12.jpg?ver=2" />
+                                            <img src="../../images/sub/mtt12.jpg?ver=3" style="border-bottom: 1px solid #dcdcdc" />
                                             <div class="marketing_info_text">
                                                 <h2>롱기스트</h2>
                                                 <p>
