--- a/m/index.html
+++ b/m/index.html
@@ -141,7 +141,7 @@
                               </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/main/main_img_solution2.jpg">
+                                <img src="images/main/main_img_solution2.png">
                                 <div>
                                     <h3>석교상사</h3>
                                     <p>#스크린광고</p>
