--- a/main.html
+++ b/main.html
@@ -159,7 +159,7 @@
                             <p>#GTOUR 인비테이셔널</p>
                         </div>
                         <div>
-                            <a href="sub/marketingsolution/marketing.html#e1" class="innerborder" style="background-image: url('images/main/main_img_solution2.jpg');"></a>
+                            <a href="sub/marketingsolution/marketing.html#e1" class="innerborder" style="background-image: url('images/main/main_img_solution2.png');"></a>
                             <h3>석교상사</h3>
                             <p>#스크린광고</p>
                             <p>#홀이동광고</p>
