--- a/sub/marketingsolution/marketing.html
+++ b/sub/marketingsolution/marketing.html
@@ -716,7 +716,7 @@
                                 </h2>
                                 <p class="pop_text">#배틀존&nbsp;&nbsp;#브랜드커뮤니케이션&nbsp;&nbsp;#오브젝트이벤트</p>
                                 <div class="pop_info_img" style="text-align: center;">
-                                    <img src="../../images/sub/mtt5.jpg" alt="" style="max-width:720px;border:15px solid white" />
+                                    <img src="../../images/sub/mtt5-2.jpg" alt="" style="max-width:720px;border:15px solid white" />
                                 </div>
                                 <div class="pop_text_list">
                                     <dl style="margin-top:0">
