--- a/m/sub/eventship/championship.html
+++ b/m/sub/eventship/championship.html
@@ -84,10 +84,10 @@
                             <li><a href="../eventship/championship.html">대회 스폰서십</a></li>
                         </ul>
                     </li>
-                    <li>골프존닷컴
+                    <li>모바일 광고
                         <ul>
                             <!-- <li><a href="../golfzon/web.html">Web 광고</a></li> -->
-                            <li><a href="../golfzon/app.html">APP 광고</a></li>
+                            <li><a href="../golfzon/app.html">모바일 광고</a></li>
                         </ul>
                     </li>
                     <li><a href="../marketingsolution/marketing.html">마케팅 솔루션 사례</a></li>
@@ -176,7 +176,7 @@
                     <dl>
                         <dt>2</dt>
                         <dd>판매 단가<br />
-                            <span>5천만원 | 대회 1개월 + 홀이동 로딩창<br />이미지 세트 1구좌<br />2천만원 | 폐쇄형 대회<br />
+                            <span>6천만원 | 대회 1개월 + 홀이동 로딩창<br />이미지 세트 1구좌<br />6천만원 | 폐쇄형 대회<br />
                                 <span style="font-size:12px">(지정된 특정 참여자만 대회 참여 가능)</span></span></dd>
                     </dl>
                     <dl>
@@ -190,7 +190,7 @@
                     </dl>
                     <dl>
                         <dt>5</dt>
-                        <dd>판매 단가<br /><span>5천만원(1개CC,1개월)<br /><span style="font-size:12px">*CC 1개 추가 비용 1,000만원</span></span></dd>
+                        <dd>판매 단가<br /><span>6천만원(1개CC,1개월)<br /><span style="font-size:12px">*CC 1개 추가 비용 1,000만원</span></span></dd>
                     </dl>
                     <dl>
                         <dt>6</dt>
