--- a/sub/eventship/championship.html
+++ b/sub/eventship/championship.html
@@ -33,7 +33,7 @@
                         <ul>
                             <li><a href="../screen/practice.html">스크린 광고</a></li>
                             <li><a href="../eventship/event.html" style="font-weight:bold;color:#f3982a">이벤트/대회 스폰서십</a></li>
-                            <li><a href="../golfzon/app.html">골프존닷컴</a></li>
+                            <li><a href="../golfzon/app.html">모바일 광고</a></li>
                             <li><a href="../marketingsolution/marketing.html">마케팅 솔루션 사례</a></li>
                             <!-- <li><a href="../addzone/addzone.html">광고지면</a></li> -->
                             <li><a href="../partnership/partnership.html">골프장 제휴</a></li>
@@ -58,7 +58,7 @@
                     <div class="nav3_on">
                         <ul class="nav3_on">
                             <!-- <li><a href="../golfzon/web.html">Web 광고</a></li> -->
-                            <li><a href="../golfzon/app.html">APP 광고</a></li>
+                            <li><a href="../golfzon/app.html">모바일 광고</a></li>
                         </ul>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                             <dl>
                                 <dt>2</dt>
                                 <dd>판매 단가<br />
-                                    <span>5천만원 | 대회 1개월 + 홀이동 로딩창<br />이미지 세트 1구좌<br /><span style="margin-top:10px">2천만원 | 폐쇄형 대회<br />
+                                    <span>6천만원 | 대회 1개월 + 홀이동 로딩창<br />이미지 세트 1구좌<br /><span style="margin-top:10px">6천만원 | 폐쇄형 대회<br />
                                     <span style="font-size:15px">(지정된 특정 참여자만 대회 참여 가능)</span></span></span>
                                 </dd>
                             </dl>
@@ -160,7 +160,7 @@
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>판매 단가<br /><span>5천만원(1개CC,1개월)<br /><span style="margin-top:0;font-size:15px">*CC 1개 추가 비용 1,000만원</span></span></dd>
+                                <dd>판매 단가<br /><span>6천만원(1개CC,1개월)<br /><span style="margin-top:0;font-size:15px">*CC 1개 추가 비용 1,000만원</span></span></dd>
                             </dl>
                             <dl>
                                 <dt>6</dt>
