--- a/sub/golfzon/app.html
+++ b/sub/golfzon/app.html
@@ -33,7 +33,7 @@
                         <ul>
                             <li><a href="../screen/practice.html">스크린 광고</a></li>
                             <li><a href="../eventship/event.html">이벤트/대회 스폰서십</a></li>
-                            <li><a href="../golfzon/app.html" style="font-weight:bold;color:#f3982a">골프존닷컴</a></li>
+                            <li><a href="../golfzon/app.html" style="font-weight:bold;color:#f3982a">모바일 광고</a></li>
                             <li><a href="../marketingsolution/marketing.html">마케팅 솔루션 사례</a></li>
                             <!-- <li><a href="../addzone/addzone.html">광고지면</a></li> -->
                             <li><a href="../partnership/partnership.html">골프장 제휴</a></li>
@@ -58,7 +58,7 @@
                     <div class="nav3_on">
                         <ul class="nav3_on">
                             <!-- <li><a href="../golfzon/web.html">Web 광고</a></li> -->
-                            <li><a href="../golfzon/app.html" style="font-weight:bold;color:#f3982a">APP 광고</a></li>
+                            <li><a href="../golfzon/app.html" style="font-weight:bold;color:#f3982a">모바일 광고</a></li>
                         </ul>
                     </div>
                 </div>
@@ -74,12 +74,12 @@
                     <ul>
                         <li><img src="../../images/sub/ico_sub_page_nav_home.png" alt="home" /></li>
                         <li>골프존닷컴</li>
-                        <li>App 광고</li>
+                        <li>모바일 광고</li>
                     </ul>
                 </div>
                 <div class="sub_title">
-                    <h2>APP 광고</h2>
-                    <p>NO.1 골프정보사이트 골프존닷컴</p>
+                    <h2>모바일 광고</h2>
+                    <p>올인원 통합 골프 서비스의 골프존앱</p>
                 </div>
                 <div class="sub_tab_menu">
                     <ul>
