--- a/m/index.html
+++ b/m/index.html
@@ -83,10 +83,10 @@
                             <li><a href="sub/eventship/championship.html">대회 스폰서십</a></li>
                         </ul>
                     </li>
-                    <li>골프존닷컴
+                    <li>모바일 광고
                         <ul>
                             <!-- <li><a href="sub/golfzon/web.html">Web 광고</a></li> -->
-                            <li><a href="sub/golfzon/app.html">APP 광고</a></li>
+                            <li><a href="sub/golfzon/app.html">모바일 광고</a></li>
                         </ul>
                     </li>
                     <li><a href="sub/marketingsolution/marketing.html">마케팅 솔루션 사례</a></li>
