--- a/m/sub/golfzon/app.html
+++ b/m/sub/golfzon/app.html
@@ -84,10 +84,10 @@
                             <li><a href="../eventship/championship.html">대회 스폰서십</a></li>
                         </ul>
                     </li>
-                    <li>골프존닷컴
+                    <li>모바일 광고
                         <ul>
                             <!-- <li><a href="../golfzon/web.html">Web 광고</a></li> -->
-                            <li><a href="../golfzon/app.html">APP 광고</a></li>
+                            <li><a href="../golfzon/app.html">모바일 광고</a></li>
                         </ul>
                     </li>
                     <li><a href="../marketingsolution/marketing.html">마케팅 솔루션 사례</a></li>
@@ -103,14 +103,14 @@
     <!-- content -->
         <div id="content">
             <div class="sub_golfzon_top_visual">
-                <h1>골프존닷컴</h1>                
+                <h1>모바일 광고</h1>                
             </div>
             <div class="sub_path">
-                <p>홈<img src="../../images/sub/ico_sub_page_nav_next.png" />골프존닷컴<img src="../../images/sub/ico_sub_page_nav_next.png" /><b>App 광고</b></p>
+                <p>홈<img src="../../images/sub/ico_sub_page_nav_next.png" />골프존닷컴<img src="../../images/sub/ico_sub_page_nav_next.png" /><b>모바일 광고</b></p>
             </div>
             <div class="sub_title">
-                <h2>APP 광고</h2>
-                <p>NO.1 골프정보사이트 골프존닷컴</p>
+                <h2>모바일 광고</h2>
+                <p>올인원 통합 골프 서비스의 골프존앱</p>
             </div>
             <div>
                 <div class="sub_tab_wrap">
