--- a/m/sub/screen/practice4.html
+++ b/m/sub/screen/practice4.html
@@ -84,10 +84,10 @@
                             <li><a href="../eventship/championship.html">대회 스폰서십</a></li>
                         </ul>
                     </li>
-                    <li>골프존닷컴
+                    <li>모바일 광고
                         <ul>
                             <!-- <li><a href="../golfzon/web.html">Web 광고</a></li> -->
-                            <li><a href="../golfzon/app.html">APP 광고</a></li>
+                            <li><a href="../golfzon/app.html">모바일 광고</a></li>
                         </ul>
                     </li>
                     <li><a href="../marketingsolution/marketing.html">마케팅 솔루션 사례</a></li>
