--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
                         <ul>
                             <li><a href="./sub/screen/practice.html">스크린 광고</a></li>
                             <li><a href="./sub/eventship/event.html">이벤트/대회 스폰서십</a></li>
-                            <li><a href="./sub/golfzon/web.html">골프존닷컴</a></li>
+                            <li><a href="./sub/golfzon/web.html">모바일 광고</a></li>
                             <li><a href="./sub/marketingsolution/marketing.html">마케팅 솔루션 사례</a></li>
                             <!-- <li><a href="./sub/addzone/addzone.html">광고지면</a></li> -->
                             <li><a href="./sub/partnership/partnership.html">골프장 제휴</a></li>
@@ -62,7 +62,7 @@
                         <ul>
                             <li><a href="./sub/screen/practice.html">스크린 광고</a></li>
                             <li><a href="./sub/eventship/event.html">이벤트/대회 스폰서십</a></li>
-                            <li><a href="./sub/golfzon/app.html">골프존닷컴</a></li>
+                            <li><a href="./sub/golfzon/app.html">모바일 광고</a></li>
                             <li><a href="./sub/marketingsolution/marketing.html">마케팅 솔루션 사례</a></li>
                             <!-- <li><a href="./sub/addzone/addzone.html">광고지면</a></li> -->
                             <li><a href="./sub/partnership/partnership.html">골프장 제휴</a></li>
@@ -87,7 +87,7 @@
                     <div class="nav3_on">
                         <ul class="nav3_on">
                             <!-- <li><a href="./sub/golfzon/web.html">Web 광고</a></li> -->
-                            <li><a href="./sub/golfzon/app.html">APP 광고</a></li>
+                            <li><a href="./sub/golfzon/app.html">모바일 광고</a></li>
                         </ul>
                     </div>
                 </div>
